fixed calendar overlapping with bottom_hud

--- a/client/less/review.less
+++ b/client/less/review.less
@@ -4,6 +4,9 @@
     text-align: center;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    display: table;
+    position: relative;
 }
 
 .review ul {
